{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 282,
  "lineage": "dce2f716-b422-80d4-0e62-4da970643039",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "todoapp_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ebc1ac48dfd14136",
            "arn": "arn:aws:ec2:ap-south-1:917470431567:instance/i-09e2bd0429a947b5f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e2bd0429a947b5f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07cc0e03892c39c3b",
            "private_dns": "ip-10-20-0-75.ap-south-1.compute.internal",
            "private_ip": "10.20.0.75",
            "public_ip": "52.66.200.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-054a61bec430f753b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019d47bbeeb201185",
            "tags": {
              "Name": "EC2 instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d99446f936d6b5e5"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.ec2_key_pair",
            "module.public-subnets.aws_subnet.public-subnets",
            "module.public-subnets.data.aws_availability_zones.available",
            "module.sgs.aws_security_group.ec2_security_group",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ebc1ac48dfd14136",
            "arn": "arn:aws:ec2:ap-south-1:917470431567:instance/i-0b31976ab641ef32b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b31976ab641ef32b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09725367bd0348d04",
            "private_dns": "ip-10-20-1-129.ap-south-1.compute.internal",
            "private_ip": "10.20.1.129",
            "public_ip": "13.233.146.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03eca901b40dfa56f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b1cfe757c3b600f",
            "tags": {
              "Name": "EC2 instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d99446f936d6b5e5"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.ec2_key_pair",
            "module.public-subnets.aws_subnet.public-subnets",
            "module.public-subnets.data.aws_availability_zones.available",
            "module.sgs.aws_security_group.ec2_security_group",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "todoapp_ec2_jenkins_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ebc1ac48dfd14136",
            "arn": "arn:aws:ec2:ap-south-1:917470431567:instance/i-00a0431c179d9fe6b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a0431c179d9fe6b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b319f5300ca7455d",
            "private_dns": "ip-10-20-0-138.ap-south-1.compute.internal",
            "private_ip": "10.20.0.138",
            "public_ip": "13.233.174.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08cb97c484fb8a634",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019d47bbeeb201185",
            "tags": {
              "Name": "EC2 Jenkins instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fd5cf2b9b5e4c49f"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.ec2_key_pair",
            "module.public-subnets.aws_subnet.public-subnets",
            "module.public-subnets.data.aws_availability_zones.available",
            "module.sgs.aws_security_group.ec2_lb_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "ec2_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:917470431567:loadbalancer/ec2-load-balancer-default",
            "availability_zones": [
              "ap-south-1a",
              "ap-south-1b",
              "ap-south-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 30,
            "cross_zone_load_balancing": true,
            "dns_name": "ec2-load-balancer-default-2063629752.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "ec2-load-balancer-default",
            "idle_timeout": 400,
            "instances": [
              "i-09e2bd0429a947b5f",
              "i-0b31976ab641ef32b"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "ec2-load-balancer-default",
            "security_groups": [
              "sg-0fd5cf2b9b5e4c49f"
            ],
            "source_security_group": "917470431567/ec2-lb-security-group",
            "source_security_group_id": "sg-0fd5cf2b9b5e4c49f",
            "subnets": [
              "subnet-019d47bbeeb201185",
              "subnet-02b83ff292df13d7e",
              "subnet-08b1cfe757c3b600f"
            ],
            "tags": {
              "Name": "ec2-elastic-load-balancer"
            },
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.ec2.aws_instance.todoapp_ec2_instance",
            "module.public-subnets.aws_subnet.public-subnets",
            "module.public-subnets.data.aws_availability_zones.available",
            "module.sgs.aws_security_group.ec2_lb_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:917470431567:internet-gateway/igw-0efc8ad92ee243868",
            "id": "igw-0efc8ad92ee243868",
            "owner_id": "917470431567",
            "tags": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-0595b2fae791fb15c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04a55fc5497b45049",
            "owner_id": "917470431567",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0efc8ad92ee243868",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route table"
            },
            "vpc_id": "vpc-0595b2fae791fb15c"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd5bfb41075dd943",
            "route_table_id": "rtb-04a55fc5497b45049",
            "subnet_id": "subnet-019d47bbeeb201185"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.igw.aws_route_table.public-route-table",
            "module.public-subnets.aws_subnet.public-subnets",
            "module.public-subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cbf88fd79ba09e8",
            "route_table_id": "rtb-04a55fc5497b45049",
            "subnet_id": "subnet-08b1cfe757c3b600f"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.igw.aws_route_table.public-route-table",
            "module.public-subnets.aws_subnet.public-subnets",
            "module.public-subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b94171bd57e9b85a",
            "route_table_id": "rtb-04a55fc5497b45049",
            "subnet_id": "subnet-02b83ff292df13d7e"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.igw.aws_route_table.public-route-table",
            "module.public-subnets.aws_subnet.public-subnets",
            "module.public-subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a780d5bac870126a",
            "arn": "arn:aws:ec2:ap-south-1:917470431567:instance/i-07bf2f362bf6d864f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07bf2f362bf6d864f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e5f70f4fc385daf9",
            "private_dns": "ip-10-20-0-157.ap-south-1.compute.internal",
            "private_ip": "10.20.0.157",
            "public_ip": "13.232.242.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07e2db398ed44979a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-019d47bbeeb201185",
            "tags": {
              "Name": "NAT instance on public subnet subnet-019d47bbeeb201185"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a6bb17f125486ad"
            ]
          },
          "dependencies": [
            "module.public-subnets.aws_subnet.public-subnets",
            "module.public-subnets.data.aws_availability_zones.available",
            "module.sgs.aws_security_group.nat_security_group",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02fde342bd761c7e0",
            "owner_id": "917470431567",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-07bf2f362bf6d864f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0e5f70f4fc385daf9",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private route table for NAT instance"
            },
            "vpc_id": "vpc-0595b2fae791fb15c"
          },
          "dependencies": [
            "module.nat.aws_instance.nat_instance",
            "module.public-subnets.aws_subnet.public-subnets",
            "module.public-subnets.data.aws_availability_zones.available",
            "module.sgs.aws_security_group.nat_security_group",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-table-to-private-subnets-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080d5183a5bee6cc3",
            "route_table_id": "rtb-02fde342bd761c7e0",
            "subnet_id": "subnet-067ce66a2bf849ded"
          },
          "dependencies": [
            "module.nat.aws_instance.nat_instance",
            "module.nat.aws_route_table.private_route_table_to_nat",
            "module.private-subnets.aws_subnet.private-subnets",
            "module.public-subnets.aws_subnet.public-subnets",
            "module.public-subnets.data.aws_availability_zones.available",
            "module.sgs.aws_security_group.nat_security_group",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da29aba973d67330",
            "route_table_id": "rtb-02fde342bd761c7e0",
            "subnet_id": "subnet-09156121c0bdb70d6"
          },
          "dependencies": [
            "module.nat.aws_instance.nat_instance",
            "module.nat.aws_route_table.private_route_table_to_nat",
            "module.private-subnets.aws_subnet.private-subnets",
            "module.public-subnets.aws_subnet.public-subnets",
            "module.public-subnets.data.aws_availability_zones.available",
            "module.sgs.aws_security_group.nat_security_group",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:917470431567:subnet/subnet-067ce66a2bf849ded",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.3.0/24",
            "id": "subnet-067ce66a2bf849ded",
            "map_public_ip_on_launch": false,
            "owner_id": "917470431567",
            "tags": {
              "Name": "Private Subnet - 1 "
            },
            "vpc_id": "vpc-0595b2fae791fb15c"
          },
          "dependencies": [
            "module.public-subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:917470431567:subnet/subnet-09156121c0bdb70d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.4.0/24",
            "id": "subnet-09156121c0bdb70d6",
            "map_public_ip_on_launch": false,
            "owner_id": "917470431567",
            "tags": {
              "Name": "Private Subnet - 2 "
            },
            "vpc_id": "vpc-0595b2fae791fb15c"
          },
          "dependencies": [
            "module.public-subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:917470431567:subnet/subnet-019d47bbeeb201185",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.0.0/24",
            "id": "subnet-019d47bbeeb201185",
            "map_public_ip_on_launch": true,
            "owner_id": "917470431567",
            "tags": {
              "Name": "Public Subnet - 1 "
            },
            "vpc_id": "vpc-0595b2fae791fb15c"
          },
          "dependencies": [
            "module.public-subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:917470431567:subnet/subnet-08b1cfe757c3b600f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-08b1cfe757c3b600f",
            "map_public_ip_on_launch": true,
            "owner_id": "917470431567",
            "tags": {
              "Name": "Public Subnet - 2 "
            },
            "vpc_id": "vpc-0595b2fae791fb15c"
          },
          "dependencies": [
            "module.public-subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:917470431567:subnet/subnet-02b83ff292df13d7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-02b83ff292df13d7e",
            "map_public_ip_on_launch": true,
            "owner_id": "917470431567",
            "tags": {
              "Name": "Public Subnet - 3 "
            },
            "vpc_id": "vpc-0595b2fae791fb15c"
          },
          "dependencies": [
            "module.public-subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:917470431567:security-group/sg-0fd5cf2b9b5e4c49f",
            "description": "Enable security for ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd5cf2b9b5e4c49f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2-lb-security-group",
            "name_prefix": "",
            "owner_id": "917470431567",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ELB security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0595b2fae791fb15c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:917470431567:security-group/sg-0d99446f936d6b5e5",
            "description": "Enable security for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d99446f936d6b5e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "EC2 Security Group",
            "name_prefix": "",
            "owner_id": "917470431567",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2 security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0595b2fae791fb15c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:917470431567:security-group/sg-03a6bb17f125486ad",
            "description": "Allow traffic for private subnets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a6bb17f125486ad",
            "ingress": [],
            "name": "NAT Security Group",
            "name_prefix": "",
            "owner_id": "917470431567",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NAT security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0595b2fae791fb15c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:917470431567:security-group/sg-05ca2200296fbfe21",
            "description": "Enable security for RDS instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ca2200296fbfe21",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-security-group-for-todoapp",
            "name_prefix": "",
            "owner_id": "917470431567",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0595b2fae791fb15c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.todoapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "todoapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:917470431567:vpc/vpc-0595b2fae791fb15c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-05b3f39e09b9487b4",
            "default_route_table_id": "rtb-0ea7fe6c3916ab03c",
            "default_security_group_id": "sg-04991088eb6501b8d",
            "dhcp_options_id": "dopt-5e9b5935",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0595b2fae791fb15c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ea7fe6c3916ab03c",
            "owner_id": "917470431567",
            "tags": {
              "Environment": "default",
              "Location": "India",
              "Name": "todoapp-vpc-dev"
            }
          }
        }
      ]
    }
  ]
}